--- a/.github/workflows/image-release.yaml
+++ b/.github/workflows/image-release.yaml
@@ -26,5 +26,5 @@ jobs:
         with:
           push: true
           tags: |
-            ghcr.io/the-gophers/go-action:${{ env.RELEASE_VERSION }}
-            ghcr.io/the-gophers/go-action:latest
+            ghcr.io/mtpereira/go-action:${{ env.RELEASE_VERSION }}
+            ghcr.io/mtpereira/go-action:latest
