Use pre-built Action image

--- a/action.yaml
+++ b/action.yaml
@@ -24,9 +24,7 @@ outputs:
     description: 'message sent to Twitter'
 runs:
   using: docker
-  image: Dockerfile
-#  using: docker
-#  image: docker://ghcr.io/the-gophers/go-action:1.0.0
+  image: docker://ghcr.io/mtpereira/go-action:1.0.0
   args:
     - --message
     - "${{ inputs.message }}"
